Fix biologics tests